update dependencies to create dynamic data base

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=SquizzBattle
+# PostgreSQL Verbindung
+spring.datasource.url=jdbc:postgresql://localhost:5433/quizbattle
+spring.datasource.username=postgres
+spring.datasource.password=1234
+
+# JPA (ORM) Einstellungen
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Optional: H2-Konsole ausschalten
+spring.h2.console.enabled=false
